test/fail/ifex24.v3
//@seman
def x = if(false, "string", d());
def d<T>() -> T { return T.default; }
